# fat-lions

./: CMakeLists.txt  Makefile  README.md  fat-lions
View/: CMakeLists.txt  animal_view.cpp  animal_view.h  chart.cpp  chart.h  grass_view.cpp  grass_view.h  lion.cpp  lion.h  main.cpp  obstacles_view.cpp  obstacles_view.h  view.cpp  view.h  view.ui  zebra.cpp  zebra.h
build-View-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Instruction.md  Makefile  View  View.cbp  cmake_install.cmake
build-View-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.cmake/api/v1/reply/: cache-v2-17f0c168ef15fb4e49a9.json  cmakeFiles-v1-09fda38a6d71ba0ef7c1.json  codemodel-v2-3631bbcd1020ad787cf1.json  index-2020-03-05T16-06-00-0657.json  target-View-Debug-b181e8d016322c58e8da.json  target-View_autogen-Debug-bc7ef1bbae1e9c26641c.json
build-View-Desktop_x86_darwin_generic_mach_o_64bit-Debug/View_autogen/EWIEGA46WW/: moc_view.cpp
include/: Animal.hpp  AnimalView.hpp  Chart.hpp  Geometry.hpp  Grass.hpp  GrassView.hpp  Lion.hpp  Obstacle.hpp  ObstaclesView.hpp  RandomLogic.hpp  VectorLogic.hpp  View.hpp  View.ui  World.hpp  Zebra.hpp  vector_logic_lion.h  vector_logic_zebra.h
src/: Animal.cpp  AnimalView.cpp  Chart.cpp  Geometry.cpp  Grass.cpp  GrassView.cpp  Lion.cpp  ObstaclesView.cpp  RandomLogic.cpp  VectorLogic.cpp  View.cpp  World.cpp  Zebra.cpp  main.cpp  vector_logic_lion.cpp  vector_logic_zebra.cpp
